# frozenbbs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  config-sample.toml  justfile  menus-sample.toml  mise.toml
migrations/2024-11-23-073353_create_users/: up.sql
migrations/2024-11-23-073848_create_boards/: up.sql
migrations/2024-11-23-164017_create_posts/: up.sql
migrations/2024-11-27-191209_create_board_states/: down.sql  up.sql
migrations/2024-12-27-175221_user_bios/: down.sql  up.sql
migrations/2024-12-27-195020_queued_messages/: down.sql  up.sql
migrations/2026-02-02-000001_create_accounts/: down.sql  up.sql
migrations/2026-02-28-174948_add_invitations/: down.sql  up.sql
src/: admin.rs  client.rs  commands.rs  db.rs  lib.rs  main.rs  paginate.rs  radio.rs  server.rs  server_mqtt.rs  server_serial.rs
src/commands/: board.rs  dm.rs  invite.rs  ping.rs  state.rs  sysop.rs  user.rs  weather.rs
src/db/: board_states.rs  boards.rs  invitations.rs  models.rs  posts.rs  queued_messages.rs  schema.rs  users.rs
