[package]
name = "frozenbbs"
version = "1.4.4"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
config = { version = "0.15.19", features = ["preserve_order"] }
diesel = { version = "2.3.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "time"] }
log = "0.4.29"
meshtastic = "0.1.8"
once_cell = "1.21.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
simple_logger = "5.1.0"
tokio = "1.48.0"
toml = "0.9.8"
validator = { version = "0.20", features = ["derive"] }
xdg = "3.0.0"
ureq = { version = "3.1.4", features = ["json"] }
url = "2.5.7"

[build-dependencies]
vergen-git2 = { version = "1.0.7", features = ["build"] }

[lints.clippy]
assigning_clones = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
explicit_iter_loop = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
unreadable_literal = "warn"
